[FIX] web: fix color-list in the Dark Mode
Step:
 - install planning module
 - active the Dark Mode
 - open planning model
 - create shift with material resource
 - check the material resource icon

Issue:
   when dark mode active that time background and color are not proper show

Fix:
   We have fixed according the tag_list.

task-3524295

closes odoo/odoo#138391

Related: odoo/enterprise#54510

--- a/addons/web/static/src/core/colorlist/colorlist.scss
+++ b/addons/web/static/src/core/colorlist/colorlist.scss
@@ -14,7 +14,9 @@
 @for $size from 2 through length($o-colors) {
     .o_colorlist_item_color_#{$size - 1} {
         $-bg: adjust-color(nth($o-colors, $size), $lightness: 25%, $saturation: 15%);
+        $-color: adjust-color(nth($o-colors, $size), $lightness: -40%, $saturation: -15%);
         @include o-print-color($-bg, background-color, bg-opacity);
+        @include o-print-color($-color, color, text-opacity);
     }
 }
 
